--- a/npm-module-webcam-picture-taker/profile.html
+++ b/npm-module-webcam-picture-taker/profile.html
@@ -1,32 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Profile</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>    
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <p></p>
-        <div class="row">
-                <div class="container">
-                    <div class="col-md-4 mx-auto">
-                        <div class="card">
-                            <img class="card-img-top" src="profile.jpg" alt="Profile" >
-                            <div class="card-body text-center">
-                                <h4 class="card-title">John Doe</h4>
-                                <p class="card-text text-muted">UI/UX Designer</p>
-                                <p class="mt-4"><a href="majPhoto.html" class="btn btn-primary">Photo!</a></p>
-                            </div>
-                        </div>
+    <div class="row ">
+        <div class="container">
+            <div class="col-md-4 col-md-offset-4">
+                <div class="card"   >
+                    <img class="card-img-top" src="profile.jpg" alt="Profile" width="300" height="250">
+                    <div class="card-body text-center">
+                        <h4 class="card-title">John Doe</h4>
+                        <p class="card-text text-muted">UI/UX Designer</p>
+                        <p class="mt-4"><a href="majPhoto.html" class="btn btn-primary"><i class="glyphicon glyphicon-camera"></i>   Photo</a></p>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
 
 
-    
+
 </body>
+
 </html>
