NPM - MODULE - WEBCAM - PICTURE - PART1

--- a/npm-module-webcam-picture-taker/majPhoto.html
+++ b/npm-module-webcam-picture-taker/majPhoto.html
@@ -22,7 +22,7 @@
                     <div class="row">
 
                         <div class="col-md-6">
-                            <video controls id="v2" width="300" height="200" autoplay="true">
+                            <video controls id="v2" width="330" height="250" autoplay="true">
                                 <source>
                                 </source>
                             </video>
@@ -33,15 +33,18 @@
 
                     </div>
                     <div class="card-body text-center">
-                        <h4 class="card-title">John Doe</h4>
+                    
+                        <h4 class="card-title">CHARAFI Oussama</h4>
                         <p class="card-text text-muted">UI/UX Designer</p>
                         <p class="mt-4"><a href="#" class="btn btn-primary" onclick="startCounting(this)"><i
                                     class="glyphicon glyphicon-camera"></i> Capturer</a>
 
                             <a href="#" class="btn btn-primary" onclick="saveImageProfil()"><i
                                     class="glyphicon glyphicon-save"></i> Save</a>
-                        </p><span class="compt"> </span>
-
+                            <a href="#" class="btn btn-primary" onclick="showEditDiv()"><i
+                                    class="glyphicon glyphicon-edit"></i> Edit</a>
+                        </p>
+                        <span class="compt"> </span>
                     </div>
                 </div>
             </div>
