--- a/npm-module-webcam-picture-taker/profile.html
+++ b/npm-module-webcam-picture-taker/profile.html
@@ -19,9 +19,9 @@
         <div class="container">
             <div class="col-md-4 col-md-offset-4">
                 <div class="card">
-                    <img class="card-img-top" src="" alt="Profile" width="300" height="250" id="profil">
+                    <img class="card-img-top" src="" alt="Profile" width="330" height="250" id="profil">
                     <div class="card-body text-center">
-                        <h4 class="card-title">John Doe</h4>
+                        <h4 class="card-title">CHARAFI Oussama</h4>
                         <p class="card-text text-muted">UI/UX Designer</p>
                         <p class="mt-4"><a href="majPhoto.html" class="btn btn-primary"><i
                                     class="glyphicon glyphicon-camera"></i> Photo</a></p>
