NPM - MODULE - WEBCAM - PICTURE - PART2

--- a/npm-module-webcam-picture-taker/majPhoto.html
+++ b/npm-module-webcam-picture-taker/majPhoto.html
@@ -10,6 +10,113 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css">
+    <style>
+        input[type=range] {
+            -webkit-appearance: none;
+            margin: 8px 0;
+            padding: 10px 25px 10px 5px;
+            width: 100%;
+        }
+
+        input[type=range]:focus {
+            outline: none;
+        }
+
+        input[type=range]::-webkit-slider-runnable-track {
+            width: 100%;
+            height: 12.8px;
+            cursor: pointer;
+            animate: 0.2s;
+            box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+            background: palegoldenrod;
+            border-radius: 25px;
+            border: 0px solid #000101;
+        }
+
+        input[type=range]::-webkit-slider-thumb {
+            box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+            border: 0px solid #000000;
+            height: 20px;
+            width: 39px;
+            border-radius: 7px;
+            background:sienna;
+            cursor: pointer;
+            -webkit-appearance: none;
+            margin-top: -3.6px;
+        }
+
+        input[type=range]:focus::-webkit-slider-runnable-track {
+            background: palegoldenrod;
+        }
+
+        input[type=range]::-moz-range-track {
+            width: 100%;
+            height: 12.8px;
+            cursor: pointer;
+            animate: 0.2s;
+            box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+            background: #ac51b5;
+            border-radius: 25px;
+            border: 0px solid #000101;
+        }
+
+        input[type=range]::-moz-range-thumb {
+            box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+            border: 0px solid #000000;
+            height: 20px;
+            width: 39px;
+            border-radius: 7px;
+            background: #65001c;
+            cursor: pointer;
+        }
+
+        input[type=range]::-ms-track {
+            width: 100%;
+            height: 12.8px;
+            cursor: pointer;
+            animate: 0.2s;
+            background: transparent;
+            border-color: transparent;
+            border-width: 39px 0;
+            color: transparent;
+        }
+
+        input[type=range]::-ms-fill-lower {
+            background: #ac51b5;
+            border: 0px solid #000101;
+            border-radius: 50px;
+            box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+        }
+
+        input[type=range]::-ms-fill-upper {
+            background: #ac51b5;
+            border: 0px solid #000101;
+            border-radius: 50px;
+            box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+        }
+
+        input[type=range]::-ms-thumb {
+            box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+            border: 0px solid #000000;
+            height: 20px;
+            width: 39px;
+            border-radius: 7px;
+            background: #65001c;
+            cursor: pointer;
+        }
+
+        input[type=range]:focus::-ms-fill-lower {
+            background: #ac51b5;
+        }
+
+        input[type=range]:focus::-ms-fill-upper {
+            background: #ac51b5;
+        }
+
+        body {
+            padding: 30px;
+        }
+    </style>
 </head>
 
 <body>
@@ -26,6 +133,13 @@
                                 <source>
                                 </source>
                             </video>
+                            <div id="edit" style="display: none;padding: 5px;">
+                                <input type="range">
+                                <input type="range">
+                                <input type="range">
+                                <input type="range">
+                                <input type="range">
+                            </div>
                         </div>
                         <div class="col-md-6">
                             <canvas id="c1" style="border:1px black solid;"></canvas>
@@ -33,7 +147,7 @@
 
                     </div>
                     <div class="card-body text-center">
-                    
+
                         <h4 class="card-title">CHARAFI Oussama</h4>
                         <p class="card-text text-muted">UI/UX Designer</p>
                         <p class="mt-4"><a href="#" class="btn btn-primary" onclick="startCounting(this)"><i
@@ -142,6 +256,15 @@
             let imgData = vlib.canvas.toDataURL("image/png");
             localStorage.setItem("imgData", imgData.replace(/^data:image\/(png|jpg);base64,/, ""));
             window.location = "profile.html";
+        }
+
+        function showEditDiv() {
+            let state=document.getElementById('edit').style.display;
+            if(state=="block")
+            document.getElementById('edit').style.display = "none";
+            else
+            document.getElementById('edit').style.display = "block";
+
         }
 
     </script>
