--- a/npm-module-webcam-picture-taker/majPhoto.html
+++ b/npm-module-webcam-picture-taker/majPhoto.html
@@ -11,18 +11,20 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style.css">
     <style>
-        input[type=range] {
+        input#contrast,
+        input#hue {
             -webkit-appearance: none;
             margin: 8px 0;
             padding: 10px 25px 10px 5px;
             width: 100%;
         }
 
-        input[type=range]:focus {
+        input#contrast:focus,
+        input#hue:focus {
             outline: none;
         }
 
-        input[type=range]::-webkit-slider-runnable-track {
+        input#contrast::-webkit-slider-runnable-track {
             width: 100%;
             height: 12.8px;
             cursor: pointer;
@@ -33,84 +35,34 @@
             border: 0px solid #000101;
         }
 
-        input[type=range]::-webkit-slider-thumb {
+        input#contrast::-webkit-slider-thumb,
+        input#hue::-webkit-slider-thumb {
             box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
             border: 0px solid #000000;
             height: 20px;
             width: 39px;
             border-radius: 7px;
-            background:sienna;
+            background: sienna;
             cursor: pointer;
             -webkit-appearance: none;
             margin-top: -3.6px;
         }
 
-        input[type=range]:focus::-webkit-slider-runnable-track {
+        input#contrast:focus::-webkit-slider-runnable-track {
             background: palegoldenrod;
         }
 
-        input[type=range]::-moz-range-track {
+
+
+        input#hue::-webkit-slider-runnable-track {
             width: 100%;
             height: 12.8px;
             cursor: pointer;
             animate: 0.2s;
             box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-            background: #ac51b5;
+            background: linear-gradient(to right, hsl(0, 100%, 88%) 0%, hsl(30, 100%, 88%) 8.3%, hsl(60, 100%, 88%) 16.6%, hsl(90, 100%, 88%) 25%, hsl(120, 100%, 88%) 33.3%, hsl(150, 100%, 88%) 41.6%, hsl(180, 100%, 88%) 50%, hsl(210, 100%, 88%) 58.3%, hsl(240, 100%, 88%) 66.6%, hsl(270, 100%, 88%) 75%, hsl(300, 100%, 88%) 83.3%, hsl(330, 100%, 88%) 91.6%, hsl(360, 100%, 88%) 100%);
             border-radius: 25px;
             border: 0px solid #000101;
-        }
-
-        input[type=range]::-moz-range-thumb {
-            box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-            border: 0px solid #000000;
-            height: 20px;
-            width: 39px;
-            border-radius: 7px;
-            background: #65001c;
-            cursor: pointer;
-        }
-
-        input[type=range]::-ms-track {
-            width: 100%;
-            height: 12.8px;
-            cursor: pointer;
-            animate: 0.2s;
-            background: transparent;
-            border-color: transparent;
-            border-width: 39px 0;
-            color: transparent;
-        }
-
-        input[type=range]::-ms-fill-lower {
-            background: #ac51b5;
-            border: 0px solid #000101;
-            border-radius: 50px;
-            box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-        }
-
-        input[type=range]::-ms-fill-upper {
-            background: #ac51b5;
-            border: 0px solid #000101;
-            border-radius: 50px;
-            box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-        }
-
-        input[type=range]::-ms-thumb {
-            box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
-            border: 0px solid #000000;
-            height: 20px;
-            width: 39px;
-            border-radius: 7px;
-            background: #65001c;
-            cursor: pointer;
-        }
-
-        input[type=range]:focus::-ms-fill-lower {
-            background: #ac51b5;
-        }
-
-        input[type=range]:focus::-ms-fill-upper {
-            background: #ac51b5;
         }
 
         body {
@@ -134,9 +86,8 @@
                                 </source>
                             </video>
                             <div id="edit" style="display: none;padding: 5px;">
-                                <input type="range">
-                                <input type="range">
-                                <input type="range">
+                                <input type="range" id="contrast" min="-100" max="100">
+                                <input type="range" id="hue" min="0" max="360">
                                 <input type="range">
                                 <input type="range">
                             </div>
@@ -183,7 +134,7 @@
             },
             copy() {
                 this.ctx.drawImage(this.video, 0, 0, this.w, this.h)
-                //this.process()
+                this.process()
                 if (this.video.ended || this.video.paused)
                     return
                 this.captured = setTimeout(_ => this.copy(), 1000 / this.FPS)
@@ -197,12 +148,28 @@
 
             },
             process() {
-                const imageData = this.ctx.getImageData(0, 0, this.w, this.h),
-                    data = imageData.data
-                for (let i = 0; i < data.length; i += 4) {
-                    const r = data[i], g = data[i + 1], b = data[i + 2], a = data[i + 3]
-                    //data[i] = data[i + 1] = data[i + 2] = (r + g + b) / 3
+
+                const imageData = this.ctx.getImageData(0, 0, this.w, this.h)
+
+                if (state.contrast == true) {
+                    contrastImage(imageData, rng1.value)
                 }
+                if (state.hue == true) {
+                    hueImage(imageData, CanvasRenderingContext2D.value)
+                }
+
+                /*
+                for (let i = 0; i < d.length; i += 4) {
+
+                    const r = d[i], g = d[i + 1], b = d[i + 2], a = d[i + 3]
+
+                    d[i] = d[i] * contrast + intercept;
+                    d[i + 1] = d[i + 1] * contrast + intercept;
+                    d[i + 2] = d[i + 2] * contrast + intercept;
+
+
+                    //data[i] = data[i + 1] = data[i + 2] = (r + g + b) / 3
+                }*/
                 this.ctx.putImageData(imageData, 0, 0)
 
             },
@@ -259,13 +226,56 @@
         }
 
         function showEditDiv() {
-            let state=document.getElementById('edit').style.display;
-            if(state=="block")
-            document.getElementById('edit').style.display = "none";
+            let state = document.getElementById('edit').style.display;
+            if (state == "block")
+                document.getElementById('edit').style.display = "none";
             else
-            document.getElementById('edit').style.display = "block";
+                document.getElementById('edit').style.display = "block";
 
         }
+
+
+        function contrastImage(imgData, contrast) {	//input range [-100..100]
+            var d = imgData.data;
+            contrast = (contrast / 100) + 1;	//convert to decimal & shift range: [0..2]
+            var intercept = 128 * (1 - contrast);
+            for (var i = 0; i < d.length; i += 4) {	//r,g,b,a
+                d[i] = d[i] * contrast + intercept;
+                d[i + 1] = d[i + 1] * contrast + intercept;
+                d[i + 2] = d[i + 2] * contrast + intercept;
+            }
+            return imgData;
+        }
+
+        function hueImage(imgData, hue) {	//input range [-100..100]
+            var d = imgData.data;
+
+            for (var i = 0; i < d.length; i += 4) {	//r,g,b,a
+                d[i] = d[i] * contrast + intercept;
+                d[i + 1] = d[i + 1] * contrast + intercept;
+                d[i + 2] = d[i + 2] * contrast + intercept;
+            }
+            return imgData;
+        }
+
+
+        state = {
+            contrast: false,
+            hue: false,
+        }
+        var rng1 = document.querySelector("#contrast");
+        var rng2 = document.querySelector("#hue");
+
+        rng1.addEventListener('change', (evt) => {
+            console.log(rng1.value)
+            state.contrast = true
+        })
+
+        rng2.addEventListener('change', (evt) => {
+            console.log(rng2.value)
+            state.hue = true
+        })
+
 
     </script>
 
