--- a/npm-module-webcam-picture-taker/majPhoto.html
+++ b/npm-module-webcam-picture-taker/majPhoto.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
     <style>
         input#contrast,
-        input#hue,input#saturation {
+        input#hue,input#saturation,input#lightness {
             -webkit-appearance: none;
             margin: 8px 0;
             padding: 10px 25px 10px 5px;
@@ -20,11 +20,12 @@
         }
 
         input#contrast:focus,
-        input#hue:focus,input#saturation {
+        input#hue:focus,input#saturation,input#lightness {
             outline: none;
         }
 
-        input#contrast::-webkit-slider-runnable-track,input#saturation::-webkit-slider-runnable-track {
+        input#contrast::-webkit-slider-runnable-track,input#saturation::-webkit-slider-runnable-track,
+        input#lightness::-webkit-slider-runnable-track {
             width: 100%;
             height: 12.8px;
             cursor: pointer;
@@ -36,7 +37,7 @@
         }
 
         input#contrast::-webkit-slider-thumb,
-        input#hue::-webkit-slider-thumb,input#saturation::-webkit-slider-thumb {
+        input#hue::-webkit-slider-thumb,input#saturation::-webkit-slider-thumb,input#lightness::-webkit-slider-thumb {
             box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
             border: 0px solid #000000;
             height: 20px;
@@ -48,7 +49,8 @@
             margin-top: -3.6px;
         }
 
-        input#contrast:focus::-webkit-slider-runnable-track,input#saturation:focus::-webkit-slider-runnable-track {
+        input#contrast:focus::-webkit-slider-runnable-track,input#saturation:focus::-webkit-slider-runnable-track,
+        input#lightness:focus::-webkit-slider-runnable-track {
             background: palegoldenrod;
         }
 
@@ -86,10 +88,10 @@
                                 </source>
                             </video>
                             <div id="edit" style="display: none;padding: 5px;">
-                                <input type="range" id="contrast" min="-100" max="100">
+                                <input type="range" id="contrast" min="0" max="100" value="100">
                                 <input type="range" id="hue" min="0" max="360" value="0">
                                 <input type="range" id="saturation" min="0" max="200" value="100">
-                                <input type="range" id="hue" min="0" max="360" value="0">
+                                <input type="range" id="lightness" min="0" max="200" value="100">
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -152,7 +154,9 @@
                 const imageData = this.ctx.getImageData(0, 0, this.w, this.h)
 
                 if (state.contrast == true) {
-                    contrastImage(imageData, rng1.value)
+                    //contrastImage(imageData, rng1.value)
+                    contrastImage(this.ctx, rng1.value)
+
                 }
                 if (state.hue == true) {
                     hueImage(this.ctx, rng2.value)
@@ -160,7 +164,9 @@
                 if (state.saturation == true) {
                     saturationImage(this.ctx, rng3.value)
                 }
-
+                if (state.lightness == true) {
+                    lightnessImage(this.ctx, rng4.value)
+                }
                 /*
                 for (let i = 0; i < d.length; i += 4) {
 
@@ -182,6 +188,9 @@
                 try {
                     stream = await navigator.mediaDevices.getUserMedia({ video: true })
                     this.video2.srcObject = stream
+
+                    
+
                 } catch (error) {
                     console.log("something was wrong")
                     videoReplace = document.querySelector('#v2')
@@ -237,7 +246,9 @@
 
         }
 
+        vi = document.querySelector('#v2')
 
+/*
         function contrastImage(imgData, contrast) {	//input range [-100..100]
             var d = imgData.data;
             contrast = (contrast / 100) + 1;	//convert to decimal & shift range: [0..2]
@@ -247,29 +258,41 @@
                 d[i + 1] = d[i + 1] * contrast + intercept;
                 d[i + 2] = d[i + 2] * contrast + intercept;
             }
-            return imgData;
+
+
+        }
+        */
+        function contrastImage(ctx, contrast) {	//input range [0..360]
+            ctx.filter = 'contrast('+contrast+'%)';
+            vi.style.filter = ctx.filter;
         }
 
         function hueImage(ctx, hue) {	//input range [0..360]
             ctx.filter = 'hue-rotate('+hue+'deg)';
+            vi.style.filter = ctx.filter;
         }
         function saturationImage(ctx, sat) {	//input range [100..0]
             ctx.filter = 'saturate('+sat+'%)';
-            console.log(ctx.filter)
+            vi.style.filter = ctx.filter;
+
         }
-        function lightnessImage(ctx, hue) {	//input range [0..360]
-            ctx.filter = 'hue-rotate('+hue+'deg)';
+        function lightnessImage(ctx, light) {	//input range [0..360]
+            ctx.filter = 'brightness('+light+'%)';
+            vi.style.filter = ctx.filter;
+
         }
 
 
         state = {
             contrast: false,
             hue: false,
-            hue: false,
+            saturation: false,
+            lightness: false,
         }
         var rng1 = document.querySelector("#contrast");
         var rng2 = document.querySelector("#hue");
         var rng3 = document.querySelector("#saturation");
+        var rng4 = document.querySelector("#lightness");
 
 
         rng1.addEventListener('change', (evt) => {
@@ -284,6 +307,10 @@
         rng3.addEventListener('change', (evt) => {
             console.log(rng3.value)
             state.saturation = true
+        })
+        rng4.addEventListener('change', (evt) => {
+            console.log(rng4.value)
+            state.lightness = true
         })
 /*
         var operations = {
